update aboutme and fix other

--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -9,19 +9,26 @@
 
 </head>
 
-<body>
+<body class="aboutme">
     <%- include navbar %>
-    <div class="aboutme">
+    <div class="">
         <div class="col-md-12" style="padding-top:90px;">
+            <div class="row no-gutters mt-1">
+                <div class="col-md-12 col-sm-12">
+                    <div class="headCard">
+                        Profile
+                    </div>
+                </div>
+            </div>
             <div class="row no-gutters">
-                <div class="col-md-6 col-sm-12 mb-1">
-                    <div class="mycard m-1">
-                        <div >
-                            <img src="/images/flower.jpg" class="d-block" style="height: 200px; width: 200px; margin: auto;">
+                <div class="col-md-3 col-sm-12 mb-1">
+                    <div class="mycardimg m-1">
+                        <div class="divImgInCard">
+                            <img src="/images/pakasit.png" class="d-block imgInCard" style="width: 170px; height: 220px;">
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 mb-1">
+                <div class="col-md-9 col-sm-12 mb-1">
                     <div class="mycard m-1">
                         <div class="col-md-12">
                             Name : Pakasit Ketudom
@@ -43,6 +50,108 @@
                         </div>
                         <div class="col-md-12">
                             Weakness : Overthink, Slow decision
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- row2 -->
+            <div class="row no-gutters mt-1">
+                <div class="col-md-12 col-sm-12">
+                    <div class="headCard">
+                        Skill
+                    </div>
+                </div>
+            </div>
+            <div class="row no-gutters">
+                <div class="col-md-12 col-sm-12 mb-1">
+                    <div class="mycard m-1" style="height: max-content;">
+                        <table class="table table-bordered" align="center" style="width: 70%;">
+                            <tr>
+                                <th style="width: 50%;">Programmer Skill</th><th tyle="width: 50%;">Language Skill</th>
+                            </tr>
+                            <tr>
+                                <td>HTML, CSS, Javascript, PHP</td>
+                                <td>English (Fair)</td>
+                            </tr>
+                            <tr>
+                                <td>JSP, Nuxt.js, Typescript</td>
+                                <td>Japan (Basic)</td>
+                            </tr>
+                            <tr>
+                                <td>Python, Basic Node.js Basic Vue.js</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Mysql, Sqlserver </td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Basic git command, Basic Linux command</td>
+                                <td></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="row no-gutters mt-1">
+                <div class="col-md-12 col-sm-12">
+                    <div class="headCard">
+                        Work Experience
+                    </div>
+                </div>
+            </div>
+            <!-- row3 -->
+            <div class="row no-gutters">
+                <div class="col-md-3 col-sm-12 mb-1">
+                    <div class="mycardimg m-1">
+                        <div class="divImgInCard">
+                            <img src="/images/sosecure_logo.png" class="d-block imgInCard">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9 col-sm-12 mb-1">
+                    <div class="mycard m-1">
+                        <div class="col-md-12">
+                            June 2018 - September 2018
+                        </div>
+                        <div class="col-md-12">
+                            Company Name : SOSECURE CO.,LTD.
+                        </div>
+                        <div class="col-md-12">
+                            Position : Web Developer(Trainee)
+                        </div>
+                        <div class="col-md-12">
+                            Reponsibility : Design and create website using PHP, HTMl, CSS, Bootstrap and learn OWASP TOP 10
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- row4 -->
+            <div class="row no-gutters">
+                <div class="col-md-3 col-sm-12 mb-1">
+                    <div class="mycardimg m-1">
+                        <div class="divImgInCard">
+                            <img src="/images/japansystem_logo.png" class="d-block imgInCard">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9 col-sm-12 mb-1">
+                    <div class="mycard m-1">
+                        <div class="col-md-12">
+                            May 2019 - Present
+                        </div>
+                        <div class="col-md-12">
+                            Company Name : JAPAN SYSTEM (THAILAND) CO.,LTD.
+                        </div>
+                        <div class="col-md-12">
+                            Position : Web Developer(Trainee)
+                        </div>
+                        <div class="col-md-12">
+                            Reponsibility : Design and create website using JSP, PHP, HTMl, CSS, Bootstrap
+                        </div>
+                        <div class="col-md-12">
+                            Outsource : September 2019 - March 2020 at M.SOFT (THAILAND) CO.,LTD.<br>
+                            Create website using Nuxt.js, Graphql, Typescript
                         </div>
                     </div>
                 </div>
