--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -16,9 +16,9 @@
     }
 </style>
 
-<body>
+<body class="portfolio">
     <%- include navbar %>
-    <div class="portfolio">
+    <div class="">
         <div class="col-md-12" style="padding-top:90px;">
             <div class="col-sm-12 row row-no-gutters mx-1">
                 <div class="col-xl-3 col-sm-6">
@@ -47,10 +47,12 @@
                                             </button>
                                         </div>
                                         <div class="modal-body text-center">
+                                            <div class="embed-responsive embed-responsive-16by9">
+                                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/L4g04lh5fag" allowfullscreen></iframe>
+                                              </div>
                                             <div class="py-3 text-left">
                                                 This system created by python. It can search detail of movies and rate,
-                                                review movies 
-                                                <a href="https://youtu.be/L4g04lh5fag" target="_blank">Youtube</a>
+                                                review movies
                                             </div>
                                             <div class="pb-3">
                                                 <img src="../images/python1.png" class="col-9">
@@ -114,9 +116,11 @@
                                             </button>
                                         </div>
                                         <div class="modal-body text-center">
+                                            <div class="embed-responsive embed-responsive-16by9">
+                                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Bu-Ed6x6rKY" allowfullscreen></iframe>
+                                              </div>
                                             <div class="py-3 text-left">
                                                 This application for who lost something in Thai-Nichi Institute of Technology can post announcements to find lost items
-                                                <a href="https://www.youtube.com/watch?v=Bu-Ed6x6rKY" target="_blank">Youtube</a>
                                             </div>
                                             <div class="pb-3">
                                                 <img src="../images/findmylost1.png" class="col-9 img_height" style="width: 300px !important;">
