--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
     /* background-size: 100% 100%; */
 }
 
-body,html{
+body, html {
     height: 100%;
     margin: 0;
 }
@@ -22,13 +22,15 @@ body,html{
     height: 100vh;
     background: url('/images/dark-nature.jpg') no-repeat 50% 50%;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .aboutme {
     width: 100%;
     height: 100vh;
-    background: url('/images/river.jpg') no-repeat 50% 50%;
+    background: url('/images/art-abstract.jpg') no-repeat 50% 50%;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .education {
@@ -43,11 +45,11 @@ body,html{
 
 .portfolio {
     width: 100%;
-    height: 100%;
-    background: url('/images/dark-nature.jpg');
+    height: 100vh;
+    background: url('/images/japantown.png') no-repeat 50% 50%;
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 @font-face {
@@ -85,16 +87,61 @@ body,html{
     /* padding: 10px; */
     /* z-index: 0; */
 }
+.mycardimg {
+    background-color: whitesmoke;
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 23px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-weight: 100px;
+    height: 280px;
+}
 
 .mycard {
     background-color: whitesmoke;
     padding: 10px;
     border-radius: 20px;
-    font-size: 28px;
+    font-size: 23px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     font-weight: 100px;
     /* opacity: 0.9; */
+    height: 280px;
+    /* height: max-content; */
+}
+
+@media only screen and (max-width: 600px) {
+    .mycard {
+        height: max-content;
+    }
+}
+
+.headCard {
+    padding: 10px;
+    background-color: rgb(10, 19, 58);
+    color: white;
+    /* width: max-content;  */
+    width: 100%;
+    text-align: center;
+    margin: auto;
+    font-size: 28px;
     height: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.divImgInCard {
+    /* display: flex; */
+    /* justify-content: center; */
+    /* margin: auto; */
+    /* text-align: center; */
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
+.imgInCard {
+    height: 200px;
+    width: 200px;
 }
 
 /* font Glitch */
@@ -157,8 +204,8 @@ body,html{
     }
 }
 
-.imgEducation{
+.imgEducation {
     width: 250px;
     height: 300px;
     margin: auto;
-  }
+}
