fix nav in ios and fix word in aboutme

--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -75,7 +75,7 @@
                             </tr>
                             <tr>
                                 <td>JSP, Nuxt.js, Typescript</td>
-                                <td>Japan (Basic)</td>
+                                <td>Japanese (Basic)</td>
                             </tr>
                             <tr>
                                 <td>Python, Basic Node.js Basic Vue.js</td>
