--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -12,7 +12,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-
+<!-- icon -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
     /*
 *
@@ -318,6 +319,15 @@
         padding: 0;
         background-color: #111;
     }
+
+    @supports (-webkit-touch-callout: none) {
+
+        /* CSS specific to iOS devices */
+        .navTrigger {
+            display: none;
+        }
+
+    }
 </style>
 
 
@@ -346,18 +356,27 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
             class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button> -->
         <div class="navTrigger" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+            class="navbar-toggler navbar-toggler-right">
+            <i></i><i></i><i></i>
+        </div>
+        <!-- hamburger for ios -->
+        <div ype="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
         class="navbar-toggler navbar-toggler-right">
-            <i></i><i></i><i></i>
+            <span style="color: azure;"><i class="fa fa-bars"></i></span>
         </div>
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active"><a href="/" class="nav-link text-uppercase font-weight-bold">Home <span
                             class="sr-only">(current)</span></a></li>
-                <li class="nav-item"><a href="/aboutme" class="nav-link text-uppercase font-weight-bold">About me</a></li>
-                <li class="nav-item"><a href="/education" class="nav-link text-uppercase font-weight-bold">Education</a></li>
-                <li class="nav-item"><a href="/portfolio" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
+                <li class="nav-item"><a href="/aboutme" class="nav-link text-uppercase font-weight-bold">About me</a>
+                </li>
+                <li class="nav-item"><a href="/education" class="nav-link text-uppercase font-weight-bold">Education</a>
+                </li>
+                <li class="nav-item"><a href="/portfolio" class="nav-link text-uppercase font-weight-bold">Portfolio</a>
+                </li>
                 <!-- <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li> -->
             </ul>
